@@ -1,0 +1,27 @@
+#!/usr/bin/env cat
+# ==============================================================================
+# SOURCE ME!!!
+# ==============================================================================
+
+# ==============================================================================
+# 跳到git 仓库顶层目录
+#
+#                 by 秦凡东
+# ==============================================================================
+function groot {
+  local flagdir=".git"
+  local topdir=$(readlink -f $(pwd))
+
+  while [[ ! -d $topdir/$flagdir && "/" != $topdir ]]; do
+    topdir=$(readlink -f $topdir/..)
+  done
+
+  if [[ "/" == $topdir ]]; then
+    echo "当前目录不在git 仓库内"
+  else
+    cd $topdir
+  fi
+
+  return $?
+}
+
