@@ -8,13 +8,13 @@ fi
 # zsh-syntax-highlighting
 if [[ ! -d $HOME/.oh-my-zsh/plugins/zsh-syntax-highlighting ]];then
   git clone https://github.com/zsh-users/zsh-syntax-highlighting.git \
-            $HOME/.oh-my-zsh/plugins/zsh-syntax-highlighting
+            $HOME/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
 fi
 
 # zsh-completions
 if [[ ! -d $HOME/.oh-my-zsh/plugins/zsh-completions ]]; then
   git clone https://github.com/zsh-users/zsh-completions.git  \
-            $HOME/.oh-my-zsh/plugins/zsh-completions
+            $HOME/.oh-my-zsh/custom/plugins/zsh-completions
 fi
 
 # for possible insecure directories
